# practice

./: architecture.md  dbus-proxy.c  dbus-proxy.cpp  meson.build  programm.cpp
headers/: flatpak-proxy-client.h  utils.h
source/: buffer.cpp  filter.cpp  flatpak-proxy-client.cpp  header.cpp  proxyside.cpp  utils.cpp
